--- a/style.css
+++ b/style.css
@@ -72,3 +72,24 @@
             color: white;
             font-size: 20px;
         }
+
+a:link {
+    color: green;
+    text-decoration: none;
+}
+
+a:visited {
+    color: pink;
+    text-decoration: none;
+}
+
+a:active {
+    color: yellow;
+    text-decoration: none;
+}
+
+a:hover {
+    color: red;
+    text-decoration: underline;
+}
+
